syntax = "proto3";

package io.harness.perpetualtask.instancesync;

message AwsAmiInstanceSyncPerpetualTaskParams {
  string region = 1;
  bytes awsConfig = 2;
  string asgName = 3;
  bytes encryptedData = 4;
}
