syntax = "proto3";

package io.harness.delegate;

option java_multiple_files = true;

message DelegateId {
  string id = 1;
}